objects/Flight_Plan_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Default_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Flight_Plan_Stage__c</fullName>
        <label>Duplicate Flight Plan Stage</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FlightPlan_ID__c</fullName>
        <label>Flight Plan ID</label>
        <referenceTo>Flight_Plan__c</referenceTo>
        <relationshipName>Flight_Plan_Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flight_Plan_Name__c</fullName>
        <formula>FlightPlan_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process Stage ID</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Flight Plan Stage</relationshipLabel>
        <relationshipName>Flight_Plan_Stages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Stage_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Stage Name</label>
        <type>Text</type>
    </fields>
    <label>Flight Plan Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FPS-{0000000000}</displayFormat>
        <label>Flight Plan Stage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Plan Stage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>